--- a/styles/style.css
+++ b/styles/style.css
@@ -152,6 +152,7 @@
   flex-wrap: wrap;
   margin: 0 auto 100px;
   padding: 0;
+  list-style: none;
 }
 
 .table__cell {
@@ -163,12 +164,14 @@
   font-size: 24px;
   line-height: 1.15;
   font-weight: 600;
+  margin: 0;
 }
 
 .table__text {
   font-size: 18px;
   line-height: 1.2;
   font-weight: normal;
+  margin: 20px 0 0;
 }
 
 .feynman {
@@ -218,6 +221,38 @@
   height: 637px;
 }
 
+.kaufman {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #1f1f1f;
+  position: relative;
+  overflow: hidden;
+}
+
+.section-title_theme_dark {
+  margin-top: 90px;
+  color: white;
+}
+
+.section-subtitle_theme_dark {
+  margin-top: 20px;
+  color: white;
+  font-size: 24px;
+  line-height: 34px;
+}
+
+.table_theme_dark {
+  margin-bottom: 90px;
+  z-index: 1;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  right: -210px;
+  width: 877px;
+  height: 877px;
+}
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
