--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,7 @@
   top: 30px;
   left: 64px;
   z-index: 1;
+  background-image: url(../images/logo_place_header.svg);
 }
 
 .header__title {
@@ -93,6 +94,7 @@
   line-height: 1.2;
   font-weight: normal;
   color: #2f80ed;
+  margin: 0;
 }
 
 .two-columns__main-text {
@@ -175,9 +177,7 @@
 }
 
 .feynman {
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
+  height: 890px;
   display: flex;
   position: relative;
   align-items: center;
@@ -228,6 +228,7 @@
   background-color: #1f1f1f;
   position: relative;
   overflow: hidden;
+  align-items: center;
 }
 
 .section-title_theme_dark {
@@ -252,6 +253,7 @@
   right: -210px;
   width: 877px;
   height: 877px;
+  top: 0;
 }
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
@@ -259,4 +261,76 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.footer {
+  background-color: #1f1f1f;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  min-height: 350px;
+}
+
+.footer__columns {
+  display: flex;
+  justify-content: space-between;
+  margin: 60px auto 40px;
+  flex-direction: row;
+  width: 90%;
+}
+
+.footer__column {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  justify-content: space-between;
+}
+
+.logo_place_footer {
+  width: 183px;
+  height: 35px;
+  background-image: url(../images/logo_place_footer.svg);
+}
+
+.footer__author {
+  margin: 18px 0;
+  color: white;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+}
+
+.footer__column_social_info {
+  justify-content: flex-start;
+}
+
+.footer__column-heading {
+  color: white;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 600;
+  margin: 0 0 20px;
+}
+
+.footer__column-links {
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 16px;
+}
+
+.footer__column-link {
+  color: white;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: normal;
+  text-decoration: none;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin: 0 10px 0 0;
 }
