--- a/styles/style.css
+++ b/styles/style.css
@@ -64,6 +64,7 @@
   width: 765px;
   height: 608px;
   z-index: 1;
+  object-fit: cover;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
@@ -234,6 +235,7 @@
 .section-title_theme_dark {
   margin-top: 90px;
   color: white;
+  z-index: 2;
 }
 
 .section-subtitle_theme_dark {
@@ -241,11 +243,12 @@
   color: white;
   font-size: 24px;
   line-height: 34px;
+  z-index: 2;
 }
 
 .table_theme_dark {
   margin-bottom: 90px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .kaufman__triangle {
@@ -254,6 +257,9 @@
   width: 877px;
   height: 877px;
   top: 0;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: contain;
+  z-index: 1;
 }
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
