--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -1,6 +1,6 @@
 .section-title {
   width: 60%;
-  margin: 100px auto 0;
+  margin: 0 auto;
   text-align: center;
   font-size: 60px;
   line-height: 1.15;
