--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -1,7 +1,7 @@
-.techniques {
+.video {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  width: 80%;
   margin: 0 auto;
+  padding-top: 100px;
 }
