--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -5,3 +5,8 @@
   font-weight: normal;
   text-decoration: none;
 }
+
+.footer__column-link:hover {
+  opacity: 0.5;
+  transition: opacity 1s linear 0.5s;
+}
