--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -6,7 +6,7 @@
   text-decoration: none;
   color: #2f80ed;
   flex-basis: 0 200px;
-  height: 42px;
+  align-self: flex-start;
 }
 
 .khan__buy-link:hover {
